# RAG2riches

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  credits.md  quickstart.md
examples/: minimal_csv_example.py  party_year_comparison_example.py  streamlit_demo_instructions.md
rag2riches/: __init__.py  batch_embeddings.py  checkpointing.py  chunking.py  cleaning.py  compare.py  config.py  embeddings.py  export.py  generation.py  ingestion.py  logging_utils.py  metadata.py  pipeline.py  prompts.py  retrieval.py  types.py
rag2riches/ui/: __init__.py  streamlit_app.py
rag2riches/vectorstores/: __init__.py  base.py  in_memory.py  lancedb_store.py
tests/: __init__.py  conftest.py  test_LanceDB_filtering_capabilities.py  test_batch_embeddings.py  test_checkpointing.py  test_chunking.py  test_cleaning.py  test_compare.py  test_embeddings.py  test_export.py  test_generation.py  test_ingestion.py  test_metadata.py  test_pipeline.py  test_retrieval.py  test_vectorstore.py
tests/fixtures/: sample_document_1.txt  sample_document_2.txt  speeches_sample.csv
