[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag2riches"
version = "0.1.0a1"
description = "Comparative retrieval-augmented generation for social science research"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Matthias Roesti", email = "m.roesti@brown.edu"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "llm",
    "comparative-analysis",
    "social-science",
    "vector-search"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pydantic>=2.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "pypdf>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
]
llm = [
    "litellm>=1.0.0",
]
vector = [
    "lancedb>=0.1.0",
]
ui = [
    "streamlit>=1.28.0",
]
all = [
    "litellm>=1.0.0",
    "lancedb>=0.1.0",
    "streamlit>=1.28.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/rag2riches"
"Documentation" = "https://rag2riches.readthedocs.io"
"Repository" = "https://github.com/yourusername/rag2riches.git"
"Bug Tracker" = "https://github.com/yourusername/rag2riches/issues"

[tool.setuptools]
packages = ["rag2riches", "rag2riches.vectorstores", "rag2riches.ui"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--verbose --cov=rag2riches --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "W503",  # line break before binary operator
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
